# avtofamily

./: .gitignore  README.md
backend/: manage.py  pyproject.toml  pytest.ini  setup.cfg
backend/avtofamily_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/avtofamily_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/inventory/: __init__.py  admin.py  apps.py  models.py
backend/inventory/api/: routers.py  serializers.py  viewsets.py
backend/inventory/migrations/: 0001_initial.py  0002_add_make_model_lookups.py
backend/inventory/services/: __init__.py  image_processing.py
backend/inventory/tests/: test_models.py
docs/: next_steps.md  roadmap.md
