[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avtofamily-backend"
version = "0.1.0"
description = "Backend services for Avtofamily automotive publishing platform"
authors = [{name = "Avtofamily", email = "info@avtofamily.by"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6",
    "djangorestframework>=3.15,<4",
    "django-filter>=24.2",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.setuptools.packages.find]
where = ["."]

