[metadata]
name = avtofamily-backend
version = 0.1.0
description = Backend services for Avtofamily automotive publishing platform
long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=5.0,<6
    djangorestframework>=3.15,<4
    django-filter>=24.2
    Pillow>=10.0
python_requires = >=3.11

[options.extras_require]
dev =
    pytest>=8.0
    pytest-django>=4.8

